# data_processing

./: 0711-0311-2-3[x].ipynb  20220317-0311-0-uauc  20220407-0311-2.ipynb  20220511-0311-03  20220511-0311-03.ipynb  20220511-0311-3  20220511-0311-3.ipynb  20220624-0311-2-1.ipynb  20220713-0311-2-4-cool.ipynb  220624-0311-2-1.ipynb  220704-0311-2-2.ipynb  220705_0311_2-3.ipynb  README.md  dandan_data_processing.ipynb  【0311-0】20220317-0311-0.ipynb
archive/: 0711-0311-2-3[x].ipynb  20220704-0311-2-2.ipynb  20220705-0311-2-3_heating.ipynb  20221123_SY128_cool.ipynb  dandan_data_processing.ipynb
template/: data_processing.ipynb  pyproject.toml
template/data/: info.txt
template/data/SY207/: NMR_SY207_0_230306.jdf  NMR_SY207_5_230202.jdf
template/data/sample-1/: NMR.csv
